--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -66,8 +66,8 @@
                         {% for choice in question.choice_set.all %}
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input type="checkbox" name="choice_{{choice.id}}" class="form-check-input"
-                                    id="{{choice.id}}" value="{{choice.id}}">{{ choice.content }}
+                                <input type="checkbox" name="choice_{{choice.id}}" class="form-check-input" id="{{choice.id}}" value="{{choice.id}}">
+                                {{ choice.content }}
                             </label>
                         </div>
                         {% endfor %}
